This and that rendering, including overlay renderering